--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 2000
-API_URL = http://52.14.91.110:8080/admin/
+REACT_APP_API_URL = http://localhost:5000/
+REACT_APP_WS_URL = ws://localhost:5000/chat/
