--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "npm": "6.13.4",
+    "node": "10.18.0"
   }
 }
